--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -6,3 +6,35 @@ body {
 a {
   color: #00B7FF;
 }
+
+#map{
+  width: 100%;
+  height: 100%;
+  min-width: 500px;
+  min-height: 500px;
+}
+
+
+#logo {
+  height: 200px;
+}
+
+.alert {
+  position: fixed;
+  top: 10px;
+
+}
+
+#infoWindowContainer {
+  display: none;
+
+}
+
+.info-wrapper {
+  min-width: 600px;
+  text-align: center;
+
+  #chart_div {
+    min-height: 200px;
+  }
+}
