--- a/views/layouts/index.hbs
+++ b/views/layouts/index.hbs
@@ -17,7 +17,7 @@
       <ul class="nav nav-tabs">
         <li role="presentation" id="home_nav" class="active"><a href='#home'>Home</a></li>
         <li role="presentation" id="map_nav"><a href='/map'>Map</a></li>
-        <li role="presentation" id="charts_nav"><a href='#charts'>Charts</a></li>
+        <li role="presentation" id="charts_nav"><a href='/charts'>Charts</a></li>
         <li role="presentation" id="admin_nav"><a href='#admin'>Admin</a></li>
       </ul>
     </nav>
