--- a/views/charts.hbs
+++ b/views/charts.hbs
@@ -4,17 +4,21 @@
 </div>
 
 <div id="chartView">
-  <div class="chartBox" id="lastWeek">
+  <div class="chartBox collapsed" id="lastWeek">
     <h4>Last Week</h4>
-    <div id="lastweekchart"></div>
+    <div class="chart-area" id="lastweekchart"></div>
   </div>
-  <div class="chartBox" id="lastMonth">
+  <div class="chartBox collapsed" id="lastMonth">
     <h4>Last Month</h4>
-    <div id="lastmonthchart"></div>
+    <div class="chart-area" id="lastmonthchart"></div>
   </div>
-  <div class="chartBox" id="lastYear">
+  <div class="chartBox collapsed" id="lastYear">
     <h4>Last Year</h4>
-    <div id="lastyearchart"></div>
+    <div class="chart-area" id="lastyearchart"></div>
+  </div>
+  <div class="chartBox collapsed" id="custom">
+    <h4>Custom</h4>
+    <div class="chart-area" id="customchart"></div>
   </div>
 </div>
 
