--- a/views/map.hbs
+++ b/views/map.hbs
@@ -1,4 +1,5 @@
 <h1>{{title}}</h1>
+<button id="resetMap" onclick="resetMap()">Recenter Map</button>
 {{!-- <p>Please choose a city</p>
 <select id="location_select">
     {{#each this.locations as |location|}}
