--- a/views/layouts/index.hbs
+++ b/views/layouts/index.hbs
@@ -7,6 +7,7 @@
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script language="javascript" src="js/bootstrap.min.js"></script>
     <script language="javascript" src="javascript/main.js"></script>
+    <script src="https://unpkg.com/@google/markerclustererplus@5.1.0/dist/markerclustererplus.min.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAtAaTzYQpAmcHclWylPgFySoEzX6quGGo&callback=initMap"></script>
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script language="javascript" src="javascript/charts.js"></script>
