--- a/views/layouts/index.hbs
+++ b/views/layouts/index.hbs
@@ -14,6 +14,7 @@
 
   </head>
   <body>
+    <div id="logo-container"><img src="images/logo.png"/></div>
     <nav id="top">
       <ul class="nav nav-tabs">
         <li role="presentation" id="home_nav" class="active"><a href='#home'>Home</a></li>
