include data page and intro page

--- a/views/charts.hbs
+++ b/views/charts.hbs
@@ -18,7 +18,9 @@
   </div>
   <div class="chartBox collapsed" id="custom">
     <h4>Custom</h4>
-    <div class="chart-area" id="customchart"></div>
+    <div class="chart-area" id="customchart">
+      In development....
+    </div>
   </div>
 </div>
 
