--- a/views/layouts/index.hbs
+++ b/views/layouts/index.hbs
@@ -17,10 +17,10 @@
     <div id="logo-container"><img src="images/logo.png"/></div>
     <nav id="top">
       <ul class="nav nav-tabs">
-        <li role="presentation" id="home_nav" class="active"><a href='#home'>Home</a></li>
+        <li role="presentation" id="home_nav" class="active"><a href='/'>Home</a></li>
         <li role="presentation" id="map_nav"><a href='/map'>Map</a></li>
         <li role="presentation" id="charts_nav"><a href='/charts'>Charts</a></li>
-        <li role="presentation" id="admin_nav"><a href='#admin'>Admin</a></li>
+        <li role="presentation" id="data_nav"><a href='/data'>Data</a></li>
       </ul>
     </nav>
     {{{body}}}
