use dbService instead of Mongo directly

--- a/views/charts.hbs
+++ b/views/charts.hbs
@@ -4,9 +4,9 @@
 </div>
 
 <div id="chartView">
-  <div class="chartBox collapsed" id="lastWeek">
-    <h4>Last Week</h4>
-    <div class="chart-area" id="lastweekchart"></div>
+  <div class="chartBox collapsed" id="lastDay">
+    <h4>Last Day</h4>
+    <div class="chart-area" id="lastdaychart"></div>
   </div>
   <div class="chartBox collapsed" id="lastMonth">
     <h4>Last Month</h4>
