--- a/views/index.hbs
+++ b/views/index.hbs
@@ -6,14 +6,14 @@ There are a number of ways to view the data of the dashbaord:
 <h3>Map</h3>
 <p>The Map page renders all of the registered Measurement Stations on a Google Map.<br>
 This allows you to quickly visualise which stations are in your country, region or locale.<br>
-Clicking on a station on the Map will display the last week (by hour) worth of PM 10 data (avg).
+Clicking on a station on the Map will display the last day (by hour) worth of PM 10 data (avg).
 </p>
 
 <h3>Charts</h3>
 <p>The Charts page shows a list view of all available measurement stations.<br>
 Clicking a station will show you the following graphs:
 <ul>
-  <li>Last Week by Hour</li>
+  <li>Last Day by Hour</li>
   <li>Last Month by Day</li>
   <li>Last Year by Month</li>
   <li>Custom</li>
