disable inactive stations

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -65,6 +65,10 @@ a {
     border-bottom: 1px dotted #cdcdcd;
 
   }
+  .not-active {
+    pointer-events: none;
+    opacity: 50%;
+  }
 }
 
 #chartView {
